--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,23 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <meta name="theme-color" content="#000000" />
+
+    <!-- Meta Description -->
+    <meta name="description" content="Convert HEIC to JPG online in seconds. Free, simple, and secure. HeicTo makes your images easy to open and share anywhere.">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:title" content="HEIC to JPG Converter – Free & Fast Online Tool | HeicTo">
+    <meta property="og:description" content="Convert HEIC to JPG online in seconds. Free, simple, and secure. HeicTo makes your images easy to open and share anywhere.">
+    <meta property="og:url" content="https://heicto.io/">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://heicto.io/og-image.png">
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="HEIC to JPG Converter – Free & Fast Online Tool | HeicTo">
+    <meta name="twitter:description" content="Convert HEIC to JPG online in seconds. Free, simple, and secure. HeicTo makes your images easy to open and share anywhere.">
+    <meta name="twitter:image" content="https://heicto.io/og-image.png">
+
     <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -22,7 +39,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>HeicTo</title>
+    <title>HEIC to JPG Converter – Free & Fast Online Tool | HeicTo</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
