--- a/public/index.html
+++ b/public/index.html
@@ -39,6 +39,16 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-7ELQHMMV5X"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-7ELQHMMV5X');
+    </script>
     <title>HEIC to JPG Converter – Free & Fast Online Tool | HeicTo</title>
   </head>
   <body>
