Add sitemap and robots.txt for SEO improvements

--- a/public/index.html
+++ b/public/index.html
@@ -49,6 +49,11 @@
 
       gtag('config', 'G-7ELQHMMV5X');
     </script>
+
+    <!-- Other meta tags -->
+    <link rel="sitemap" type="application/xml" href="/sitemap.xml" />
+
+
     <title>HEIC to JPG Converter – Free & Fast Online Tool | HeicTo</title>
   </head>
   <body>
